shimmr/shimmr.output
Terminals unused in grammar

   _ERROR_


Grammar

    0 $accept: Program $end

    1 Program: ListStatement

    2 StatementBlock: _SYMB_0 ListStatement _SYMB_1

    3 ListStatement: /* empty */
    4              | Statement
    5              | Statement _SYMB_2 ListStatement

    6 Statement: Decl
    7          | _SYMB_31 _SYMB_4 _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock
    8          | _SYMB_32 _SYMB_4 Exp _SYMB_5 StatementBlock
    9          | _SYMB_32 _SYMB_4 Exp _SYMB_5 StatementBlock ElseBlock
   10          | _SYMB_34 _SYMB_4 _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock
   11          | _SYMB_34 _SYMB_4 _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock ElseBlock
   12          | _IDENT_ _SYMB_3 Exp _SYMB_36 Exp

   13 Decl: _SYMB_35 _IDENT_ _SYMB_3 Exp
   14     | _SYMB_35 Type _IDENT_ _SYMB_3 Exp
   15     | _SYMB_35 _IDENT_ _SYMB_3 Exp _SYMB_36 Exp
   16     | _SYMB_35 Type _IDENT_ _SYMB_3 Exp _SYMB_36 Exp
   17     | _SYMB_35 Type _IDENT_

   18 ElseBlock: _SYMB_30 _SYMB_32 _SYMB_4 Exp _SYMB_5 StatementBlock
   19          | _SYMB_30 _SYMB_32 _SYMB_4 Exp _SYMB_5 StatementBlock ElseBlock
   20          | _SYMB_30 StatementBlock

   21 Exp: _SYMB_29 _SYMB_4 ListArgument _SYMB_5 StatementBlock
   22    | Exp _SYMB_6 Exp1
   23    | Exp1

   24 Exp1: Exp1 _SYMB_7 Exp2
   25     | Exp2

   26 Exp2: Exp2 _SYMB_8 Exp3
   27     | Exp2 _SYMB_9 Exp3
   28     | Exp3

   29 Exp3: Exp3 _SYMB_10 Exp4
   30     | Exp3 _SYMB_11 Exp4
   31     | Exp3 _SYMB_12 Exp4
   32     | Exp3 _SYMB_13 Exp4
   33     | Exp4

   34 Exp4: Exp4 _SYMB_14 Exp5
   35     | Exp4 _SYMB_15 Exp5
   36     | Exp5

   37 Exp5: Exp5 _SYMB_16 Exp6
   38     | Exp5 _SYMB_17 Exp6
   39     | Exp6

   40 Exp6: _SYMB_18 Exp7
   41     | Exp7

   42 Exp7: _IDENT_
   43     | _IDENT_ _SYMB_4 ListExp _SYMB_5
   44     | Exp8

   45 Argument: Type _IDENT_

   46 ListArgument: /* empty */
   47             | Argument
   48             | Argument _SYMB_19 ListArgument

   49 Exp8: _INTEGER_
   50     | _DOUBLE_
   51     | _STRING_
   52     | _SYMB_4 Exp _SYMB_5

   53 ListExp: /* empty */
   54        | Exp
   55        | Exp _SYMB_19 ListExp

   56 Type: _SYMB_25
   57     | _SYMB_24
   58     | _SYMB_27
   59     | _SYMB_23
   60     | _SYMB_22
   61     | _SYMB_26
   62     | _SYMB_28
   63     | Type _SYMB_20 _SYMB_21


Terminals, with rules where they appear

$end (0) 0
error (256)
_ERROR_ (258)
_SYMB_0 (259) 2
_SYMB_1 (260) 2
_SYMB_2 (261) 5
_SYMB_3 (262) 12 13 14 15 16
_SYMB_4 (263) 7 8 9 10 11 18 19 21 43 52
_SYMB_5 (264) 7 8 9 10 11 18 19 21 43 52
_SYMB_6 (265) 22
_SYMB_7 (266) 24
_SYMB_8 (267) 26
_SYMB_9 (268) 27
_SYMB_10 (269) 29
_SYMB_11 (270) 30
_SYMB_12 (271) 31
_SYMB_13 (272) 32
_SYMB_14 (273) 34
_SYMB_15 (274) 35
_SYMB_16 (275) 37
_SYMB_17 (276) 38
_SYMB_18 (277) 40
_SYMB_19 (278) 48 55
_SYMB_20 (279) 63
_SYMB_21 (280) 63
_SYMB_22 (281) 60
_SYMB_23 (282) 59
_SYMB_24 (283) 57
_SYMB_25 (284) 56
_SYMB_26 (285) 61
_SYMB_27 (286) 58
_SYMB_28 (287) 62
_SYMB_29 (288) 21
_SYMB_30 (289) 18 19 20
_SYMB_31 (290) 7
_SYMB_32 (291) 8 9 18 19
_SYMB_33 (292) 7 10 11
_SYMB_34 (293) 10 11
_SYMB_35 (294) 13 14 15 16 17
_SYMB_36 (295) 12 15 16
_STRING_ (296) 51
_INTEGER_ (297) 49
_DOUBLE_ (298) 50
_IDENT_ (299) 7 10 11 12 13 14 15 16 17 42 43 45


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1, on right: 0
StatementBlock (47)
    on left: 2, on right: 7 8 9 10 11 18 19 20 21
ListStatement (48)
    on left: 3 4 5, on right: 1 2 5
Statement (49)
    on left: 6 7 8 9 10 11 12, on right: 4 5
Decl (50)
    on left: 13 14 15 16 17, on right: 6
ElseBlock (51)
    on left: 18 19 20, on right: 9 11 19
Exp (52)
    on left: 21 22 23, on right: 7 8 9 10 11 12 13 14 15 16 18 19 22
    52 54 55
Exp1 (53)
    on left: 24 25, on right: 22 23 24
Exp2 (54)
    on left: 26 27 28, on right: 24 25 26 27
Exp3 (55)
    on left: 29 30 31 32 33, on right: 26 27 28 29 30 31 32
Exp4 (56)
    on left: 34 35 36, on right: 29 30 31 32 33 34 35
Exp5 (57)
    on left: 37 38 39, on right: 34 35 36 37 38
Exp6 (58)
    on left: 40 41, on right: 37 38 39
Exp7 (59)
    on left: 42 43 44, on right: 40 41
Argument (60)
    on left: 45, on right: 47 48
ListArgument (61)
    on left: 46 47 48, on right: 21 48
Exp8 (62)
    on left: 49 50 51 52, on right: 44
ListExp (63)
    on left: 53 54 55, on right: 43 55
Type (64)
    on left: 56 57 58 59 60 61 62 63, on right: 14 16 17 45 63


State 0

    0 $accept: . Program $end

    _SYMB_31  shift, and go to state 1
    _SYMB_32  shift, and go to state 2
    _SYMB_34  shift, and go to state 3
    _SYMB_35  shift, and go to state 4
    _IDENT_   shift, and go to state 5

    $default  reduce using rule 3 (ListStatement)

    Program        go to state 6
    ListStatement  go to state 7
    Statement      go to state 8
    Decl           go to state 9


State 1

    7 Statement: _SYMB_31 . _SYMB_4 _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock

    _SYMB_4  shift, and go to state 10


State 2

    8 Statement: _SYMB_32 . _SYMB_4 Exp _SYMB_5 StatementBlock
    9          | _SYMB_32 . _SYMB_4 Exp _SYMB_5 StatementBlock ElseBlock

    _SYMB_4  shift, and go to state 11


State 3

   10 Statement: _SYMB_34 . _SYMB_4 _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock
   11          | _SYMB_34 . _SYMB_4 _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock ElseBlock

    _SYMB_4  shift, and go to state 12


State 4

   13 Decl: _SYMB_35 . _IDENT_ _SYMB_3 Exp
   14     | _SYMB_35 . Type _IDENT_ _SYMB_3 Exp
   15     | _SYMB_35 . _IDENT_ _SYMB_3 Exp _SYMB_36 Exp
   16     | _SYMB_35 . Type _IDENT_ _SYMB_3 Exp _SYMB_36 Exp
   17     | _SYMB_35 . Type _IDENT_

    _SYMB_22  shift, and go to state 13
    _SYMB_23  shift, and go to state 14
    _SYMB_24  shift, and go to state 15
    _SYMB_25  shift, and go to state 16
    _SYMB_26  shift, and go to state 17
    _SYMB_27  shift, and go to state 18
    _SYMB_28  shift, and go to state 19
    _IDENT_   shift, and go to state 20

    Type  go to state 21


State 5

   12 Statement: _IDENT_ . _SYMB_3 Exp _SYMB_36 Exp

    _SYMB_3  shift, and go to state 22


State 6

    0 $accept: Program . $end

    $end  shift, and go to state 23


State 7

    1 Program: ListStatement .

    $default  reduce using rule 1 (Program)


State 8

    4 ListStatement: Statement .
    5              | Statement . _SYMB_2 ListStatement

    _SYMB_2  shift, and go to state 24

    $default  reduce using rule 4 (ListStatement)


State 9

    6 Statement: Decl .

    $default  reduce using rule 6 (Statement)


State 10

    7 Statement: _SYMB_31 _SYMB_4 . _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock

    _IDENT_  shift, and go to state 25


State 11

    8 Statement: _SYMB_32 _SYMB_4 . Exp _SYMB_5 StatementBlock
    9          | _SYMB_32 _SYMB_4 . Exp _SYMB_5 StatementBlock ElseBlock

    _SYMB_4    shift, and go to state 26
    _SYMB_18   shift, and go to state 27
    _SYMB_29   shift, and go to state 28
    _STRING_   shift, and go to state 29
    _INTEGER_  shift, and go to state 30
    _DOUBLE_   shift, and go to state 31
    _IDENT_    shift, and go to state 32

    Exp   go to state 33
    Exp1  go to state 34
    Exp2  go to state 35
    Exp3  go to state 36
    Exp4  go to state 37
    Exp5  go to state 38
    Exp6  go to state 39
    Exp7  go to state 40
    Exp8  go to state 41


State 12

   10 Statement: _SYMB_34 _SYMB_4 . _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock
   11          | _SYMB_34 _SYMB_4 . _IDENT_ _SYMB_33 Exp _SYMB_5 StatementBlock ElseBlock

    _IDENT_  shift, and go to state 42


State 13

   60 Type: _SYMB_22 .

    $default  reduce using rule 60 (Type)


State 14

   59 Type: _SYMB_23 .

    $default  reduce using rule 59 (Type)


State 15

   57 Type: _SYMB_24 .

    $default  reduce using rule 57 (Type)


State 16

   56 Type: _SYMB_25 .

    $default  reduce using rule 56 (Type)


State 17

   61 Type: _SYMB_26 .

    $default  reduce using rule 61 (Type)


State 18

   58 Type: _SYMB_27 .

    $default  reduce using rule 58 (Type)


State 19

   62 Type: _SYMB_28 .

    $default  reduce using rule 62 (Type)


State 20

   13 Decl: _SYMB_35 _IDENT_ . _SYMB_3 Exp
   15     | _SYMB_35 _IDENT_ . _SYMB_3 Exp _SYMB_36 Exp

    _SYMB_3  shift, and go to state 43


State 21

   14 Decl: _SYMB_35 Type . _IDENT_ _SYMB_3 Exp
   16     | _SYMB_35 Type . _IDENT_ _SYMB_3 Exp _SYMB_36 Exp
   17     | _SYMB_35 Type . _IDENT_
   63 Type: Type . _SYMB_20 _SYMB_21

    _SYMB_20  shift, and go to state 44
    _IDENT_   shift, and go to state 45


State 22

   12 Statement: _IDENT_ _SYMB_3 . Exp _SYMB_36 Exp

    _SYMB_4    shift, and go to state 26
    _SYMB_18   shift, and go to state 27
    _SYMB_29   shift, and go to state 28
    _STRING_   shift, and go to state 29
    _INTEGER_  shift, and go to state 30
    _DOUBLE_   shift, and go to state 31
    _IDENT_    shift, and go to state 32

    Exp   go to state 46
    Exp1  go to state 34
    Exp2  go to state 35
    Exp3  go to state 36
    Exp4  go to state 37
    Exp5  go to state 38
    Exp6  go to state 39
    Exp7  go to state 40
    Exp8  go to state 41


State 23

    0 $accept: Program $end .

    $default  accept


State 24

    5 ListStatement: Statement _SYMB_2 . ListStatement

    _SYMB_31  shift, and go to state 1
    _SYMB_32  shift, and go to state 2
    _SYMB_34  shift, and go to state 3
    _SYMB_35  shift, and go to state 4
    _IDENT_   shift, and go to state 5

    $default  reduce using rule 3 (ListStatement)

    ListStatement  go to state 47
    Statement      go to state 8
    Decl           go to state 9


State 25

    7 Statement: _SYMB_31 _SYMB_4 _IDENT_ . _SYMB_33 Exp _SYMB_5 StatementBlock

    _SYMB_33  shift, and go to state 48


State 26

   52 Exp8: _SYMB_4 . Exp _SYMB_5

    _SYMB_4    shift, and go to state 26
    _SYMB_18   shift, and go to state 27
    _SYMB_29   shift, and go to state 28
    _STRING_   shift, and go to state 29
    _INTEGER_  shift, and go to state 30
    _DOUBLE_   shift, and go to state 31
    _IDENT_    shift, and go to state 32

    Exp   go to state 49
    Exp1  go to state 34
    Exp2  go to state 35
    Exp3  go to state 36
    Exp4  go to state 37
    Exp5  go to state 38
    Exp6  go to state 39
    Exp7  go to state 40
    Exp8  go to state 41


State 27

   40 Exp6: _SYMB_18 . Exp7

    _SYMB_4    shift, and go to state 26
    _STRING_   shift, and go to state 29
    _INTEGER_  shift, and go to state 30
    _DOUBLE_   shift, and go to state 31
    _IDENT_    shift, and go to state 32

    Exp7  go to state 50
    Exp8  go to state 41


State 28

   21 Exp: _SYMB_29 . _SYMB_4 ListArgument _SYMB_5 StatementBlock

    _SYMB_4  shift, and go to state 51


State 29

   51 Exp8: _STRING_ .

    $default  reduce using rule 51 (Exp8)


State 30

   49 Exp8: _INTEGER_ .

    $default  reduce using rule 49 (Exp8)


State 31

   50 Exp8: _DOUBLE_ .

    $default  reduce using rule 50 (Exp8)


State 32

   42 Exp7: _IDENT_ .
   43     | _IDENT_ . _SYMB_4 ListExp _SYMB_5

    _SYMB_4  shift, and go to state 52

    $default  reduce using rule 42 (Exp7)


State 33

    8 Statement: _SYMB_32 _SYMB_4 Exp . _SYMB_5 StatementBlock
    9          | _SYMB_32 _SYMB_4 Exp . _SYMB_5 StatementBlock ElseBlock
   22 Exp: Exp . _SYMB_6 Exp1

    _SYMB_5  shift, and go to state 53
    _SYMB_6  shift, and go to state 54


State 34

   23 Exp: Exp1 .
   24 Exp1: Exp1 . _SYMB_7 Exp2

    _SYMB_7  shift, and go to state 55

    $default  reduce using rule 23 (Exp)


State 35

   25 Exp1: Exp2 .
   26 Exp2: Exp2 . _SYMB_8 Exp3
   27     | Exp2 . _SYMB_9 Exp3

    _SYMB_8  shift, and go to state 56
    _SYMB_9  shift, and go to state 57

    $default  reduce using rule 25 (Exp1)


State 36

   28 Exp2: Exp3 .
   29 Exp3: Exp3 . _SYMB_10 Exp4
   30     | Exp3 . _SYMB_11 Exp4
   31     | Exp3 . _SYMB_12 Exp4
   32     | Exp3 . _SYMB_13 Exp4

    _SYMB_10  shift, and go to state 58
    _SYMB_11  shift, and go to state 59
    _SYMB_12  shift, and go to state 60
    _SYMB_13  shift, and go to state 61

    $default  reduce using rule 28 (Exp2)


State 37

   33 Exp3: Exp4 .
   34 Exp4: Exp4 . _SYMB_14 Exp5
   35     | Exp4 . _SYMB_15 Exp5

    _SYMB_14  shift, and go to state 62
    _SYMB_15  shift, and go to state 63

    $default  reduce using rule 33 (Exp3)


State 38

   36 Exp4: Exp5 .
   37 Exp5: Exp5 . _SYMB_16 Exp6
   38     | Exp5 . _SYMB_17 Exp6

    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65

    $default  reduce using rule 36 (Exp4)


State 39

   39 Exp5: Exp6 .

    $default  reduce using rule 39 (Exp5)


State 40

   41 Exp6: Exp7 .

    $default  reduce using rule 41 (Exp6)


State 41

   44 Exp7: Exp8 .

    $default  reduce using rule 44 (Exp7)


State 42

   10 Statement: _SYMB_34 _SYMB_4 _IDENT_ . _SYMB_33 Exp _SYMB_5 StatementBlock
   11          | _SYMB_34 _SYMB_4 _IDENT_ . _SYMB_33 Exp _SYMB_5 StatementBlock ElseBlock

    _SYMB_33  shift, and go to state 66


State 43

   13 Decl: _SYMB_35 _IDENT_ _SYMB_3 . Exp
   15     | _SYMB_35 _IDENT_ _SYMB_3 . Exp _SYMB_36 Exp

    _SYMB_4    shift, and go to state 26
    _SYMB_18   shift, and go to state 27
    _SYMB_29   shift, and go to state 28
    _STRING_   shift, and go to state 29
    _INTEGER_  shift, and go to state 30
    _DOUBLE_   shift, and go to state 31
    _IDENT_    shift, and go to state 32

    Exp   go to state 67
    Exp1  go to state 34
    Exp2  go to state 35
    Exp3  go to state 36
    Exp4  go to state 37
    Exp5  go to state 38
    Exp6  go to state 39
    Exp7  go to state 40
    Exp8  go to state 41


State 44

   63 Type: Type _SYMB_20 . _SYMB_21

    _SYMB_21  shift, and go to state 68


State 45

   14 Decl: _SYMB_35 Type _IDENT_ . _SYMB_3 Exp
   16     | _SYMB_35 Type _IDENT_ . _SYMB_3 Exp _SYMB_36 Exp
   17     | _SYMB_35 Type _IDENT_ .

    _SYMB_3  shift, and go to state 69

    $default  reduce using rule 17 (Decl)


State 46

   12 Statement: _IDENT_ _SYMB_3 Exp . _SYMB_36 Exp
   22 Exp: Exp . _SYMB_6 Exp1

    _SYMB_6   shift, and go to state 54
    _SYMB_36  shift, and go to state 70


State 47

    5 ListStatement: Statement _SYMB_2 ListStatement .

    $default  reduce using rule 5 (ListStatement)


State 48

    7 Statement: _SYMB_31 _SYMB_4 _IDENT_ _SYMB_33 . Exp _SYMB_5 StatementBlock

    _SYMB_4    shift, and go to state 26
    _SYMB_18   shift, and go to state 27
    _SYMB_29   shift, and go to state 28
    _STRING_   shift, and go to state 29
    _INTEGER_  shift, and go to state 30
    _DOUBLE_   shift, and go to state 31
    _IDENT_    shift, and go to state 32

    Exp   go to state 71
    Exp1  go to state 34
    Exp2  go to state 35
    Exp3  go to state 36
    Exp4  go to state 37
    Exp5  go to state 38
    Exp6  go to state 39
    Exp7  go to state 40
    Exp8  go to state 41


State 49

   22 Exp: Exp . _SYMB_6 Exp1
   52 Exp8: _SYMB_4 Exp . _SYMB_5

    _SYMB_5  shift, and go to state 72
    _SYMB_6  shift, and go to state 54


State 50

   40 Exp6: _SYMB_18 Exp7 .

    $default  reduce using rule 40 (Exp6)


State 51

   21 Exp: _SYMB_29 _SYMB_4 . ListArgument _SYMB_5 StatementBlock

    _SYMB_22  shift, and go to state 13
    _SYMB_23  shift, and go to state 14
    _SYMB_24  shift, and go to state 15
    _SYMB_25  shift, and go to state 16
    _SYMB_26  shift, and go to state 17
    _SYMB_27  shift, and go to state 18
    _SYMB_28  shift, and go to state 19
